--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,11 @@
     "express": "^4.21.2",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.5"
+    "mongoose": "^8.9.5",
+    "socket.io": "^4.8.1",
+    "ua-parser-js": "^2.0.0",
+    "user-agent": "^1.0.4",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
