--- a/frontend/portacloud/package.json
+++ b/frontend/portacloud/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "next": "15.1.6",
+    "platform": "^1.3.6",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5",
     "react-transition-group": "^4.4.5",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "ua-parser-js": "^2.0.2"
   }
 }
