--- a/frontend/portacloud/package.json
+++ b/frontend/portacloud/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "next": "15.1.6",
+    "next-pwa": "^5.6.0",
     "platform": "^1.3.6",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
