--- a/frontend/portacloud/package.json
+++ b/frontend/portacloud/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
     "react-toastify": "^11.0.5",
     "react-transition-group": "^4.4.5",
     "socket.io-client": "^4.8.1",
