--- a/frontend/portacloud/package.json
+++ b/frontend/portacloud/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "next": "15.1.6",
     "next-pwa": "^5.6.0",
     "platform": "^1.3.6",
