--- a/frontend/portacloud/package.json
+++ b/frontend/portacloud/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
+    "fs": "^0.0.1-security",
     "next": "15.1.6",
     "next-pwa": "^5.6.0",
+    "path": "^0.12.7",
     "platform": "^1.3.6",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
