--- a/frontend/portacloud/package.json
+++ b/frontend/portacloud/package.json
@@ -14,6 +14,7 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "fs": "^0.0.1-security",
+    "head": "^1.0.0",
     "next": "15.1.6",
     "next-pwa": "^5.6.0",
     "path": "^0.12.7",
