--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 MONGO_URI=mongodb+srv://tfg:TFG2025@portacloud.bcld0.mongodb.net/?retryWrites=true&w=majority&appName=portacloud
 JWT_SECRET=supersecretkey
 PORT=5050
+GMAIL_USER=portacloud.admin@gmail.com
+GMAIL_PASS=tjldczgxlvcrenws
