Soporte para recuperación de contraseña por correo

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,7 @@
 MONGO_URI=mongodb+srv://tfg:TFG2025@portacloud.bcld0.mongodb.net/?retryWrites=true&w=majority&appName=portacloud
 JWT_SECRET=supersecretkey
 PORT=5050
-GMAIL_USER=portacloud.admin@gmail.com
+GMAIL_USER=portacloud.info@gmail.com
 GMAIL_PASS=tjldczgxlvcrenws
+CLIENT_URL=http://localhost:3000
+# CLIENT_URL=https://portacloud.vercel.app
