--- a/frontend/portacloud/package.json
+++ b/frontend/portacloud/package.json
@@ -13,8 +13,10 @@
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
     "fs": "^0.0.1-security",
     "head": "^1.0.0",
+    "jszip": "^3.10.1",
     "next": "15.1.6",
     "next-pwa": "^5.6.0",
     "path": "^0.12.7",
