Nuevo sistema de seguridad. Encriptación del texto. Rutas de imágenes protegidas. Solucionados erroes de las ventanas modales

--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,5 @@ PORT=5050
 GMAIL_USER=portacloud.info@gmail.com
 GMAIL_PASS=tjldczgxlvcrenws
 CLIENT_URL=http://localhost:3000
+ENCRYPTION_SECRET_KEY=0123456789abcdef0123456789abcdef
 # CLIENT_URL=https://portacloud.vercel.app
