--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -27,6 +28,7 @@
     "path": "^0.12.7",
     "socket.io": "^4.8.1",
     "ua-parser-js": "^2.0.0",
+    "use-dark-mode": "^2.3.1",
     "user-agent": "^1.0.4",
     "uuid": "^11.0.5"
   },
