--- a/frontend/portacloud/package.json
+++ b/frontend/portacloud/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
+    "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "react-transition-group": "^4.4.5",
     "socket.io-client": "^4.8.1",
