Cambios del .env

--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,8 @@
-MONGO_URI=mongodb+srv://tfg:TFG2025@portacloud.bcld0.mongodb.net/?retryWrites=true&w=majority&appName=portacloud
-JWT_SECRET=supersecretkey
-PORT=5050
-GMAIL_USER=portacloud.info@gmail.com
-GMAIL_PASS=tjldczgxlvcrenws
-CLIENT_URL=http://localhost:3000
-ENCRYPTION_SECRET_KEY=0123456789abcdef0123456789abcdef
+MONGO_URI=
+JWT_SECRET=
+PORT=
+GMAIL_USER=
+GMAIL_PASS=
+CLIENT_URL=
+ENCRYPTION_SECRET_KEY=
 # CLIENT_URL=https://portacloud.vercel.app
