--- a/frontend/portacloud/public/manifest.json
+++ b/frontend/portacloud/public/manifest.json
@@ -1,1 +1,28 @@
-{"theme_color":"#222222","background_color":"#222222","icons":[{"purpose":"maskable","sizes":"512x512","src":"icon512_maskable.png","type":"image/png"},{"purpose":"any","sizes":"512x512","src":"icon512_rounded.png","type":"image/png"}],"orientation":"any","display":"standalone","dir":"auto","lang":"es-ES","name":"PortaCloud","short_name":"PortaCloud","start_url":"https://portacloud.vercel.app/login","scope":"https://portacloud.vercel.app/","id":"https://portacloud.vercel.app/"}
+{
+    "theme_color": "#222222",
+    "background_color": "#222222",
+    "icons": [
+      {
+        "purpose": "maskable",
+        "sizes": "512x512",
+        "src": "icon512_maskable.png",
+        "type": "image/png"
+      },
+      {
+        "purpose": "any",
+        "sizes": "512x512",
+        "src": "icon512_rounded.png",
+        "type": "image/png"
+      }
+    ],
+    "orientation": "any",
+    "display": "standalone",
+    "dir": "auto",
+    "lang": "es-ES",
+    "name": "PortaCloud",
+    "short_name": "PortaCloud",
+    "start_url": "https://portacloud.vercel.app/login",
+    "scope": "https://portacloud.vercel.app/",
+    "id": "https://portacloud.vercel.app/",
+    "description": "Gestión de Portapapeles Multiplataforma con Sincronización en la Nube"
+  }
